Revision history for Perl extension Module::Starter

NEXT

        [FIXES]
        * Now properly reports on all files in --verbose mode.

1.42    Wed Nov  9 11:25:10 CST 2005
        [FIXES]
        * Don't build Build.PL or Makefile.PL multiple times
        * Move Test::More from require to build_require in Build.PL

        [ENHANCEMENTS]
        * Documentation now includes references to search.cpan, AnnoCPAN,
          RT and CPAN Ratings.
        * Email addresses are now obfuscated very basically as
          "andy at petdance.com".
        * Include boilerplate.t to notice unchanged boilerplate text
        * Experimental new method to handle plugin loading

1.40    Wed Jul  6 19:30:00 CDT 2005
        [FIXES]
        * Document --dir option to module-starter
        * Proper escaping of $] and $^X
        * Never use \ for path delimiters in {Makefile,Build}.PL
        * Don't always completely ignore --license

1.38    Wed Mar 16 20:28:00 CST 2005
        [FIXES]
        * Don't allow invalid module names

1.36    Mon Mar  7 08:38:00 CST 2005
        [FIXES]
        * 00.load.t is now 00-load.t, so VMS and RiscOS folks can use it.
        * Escape apostrophes in author name in Makefile.PL
        * Add a link directly to this dist's queue in RT, not just to RT
        * Don't set configdir to something in $HOME if it's undef

1.34    Mon Sep 20 19:15:00 CDT 2004
        [ENHANCEMENTS]
        * module-starter now reads a config file

1.30    Mon Aug 16 14:00:00 CDT 2004
        [ENHANCEMENTS]
        * Module::Starter is now merely a public interface to plugins
        * Module::Starter::Simple, the old M::S is now a plugin
        * Module::Starter::Plugin::Template added
        * module-starter now shows usage if no parms are passed.
        * The t/pod.t and t/pod-coverage.t files now use tainting,
          and require the appropriate versions of Test::Pod and
          Test::Pod::Coverage, respectively.

1.22    Mon Jul 12 17:05:26 CDT 2004
